fix header alignment

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,16 @@
   <link rel="stylesheet" href="https://unpkg.com/mvp.css">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | relative_url }}">
   <style>
-    a {
+    header {
+      text-align: left;
+    }
+    
+    header nav {
+      justify-content: flex-start;
+    }
+    
+    header nav a {
+      margin-right: 1rem;
       color: inherit;
       text-decoration: underline;
     }
