--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,17 +9,26 @@
   <style>
     header {
       text-align: left;
+      padding: 1rem;
     }
     
     header nav {
       justify-content: flex-start;
-      margin-bottom: 1rem;
+      margin-bottom: 0.5rem;
     }
     
     header nav a {
       margin-right: 1rem;
       color: inherit;
       text-decoration: underline;
+    }
+    
+    main {
+      padding: 1rem;
+    }
+    
+    footer {
+      padding: 1rem;
     }
   </style>
 </head>
