--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,13 +22,22 @@
       color: inherit;
       text-decoration: underline;
     }
+
+    body {
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
     
     main {
+      flex-grow: 1;
       padding: 1rem;
     }
     
     footer {
       padding: 1rem;
+      border-top: 1px solid var(--border);
+      margin-top: auto;
     }
   </style>
 </head>
