--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
     header {
       text-align: left;
       padding: 1rem;
+      width: 100%;
     }
     
     header nav {
@@ -36,8 +37,9 @@
     
     footer {
       padding: 1rem;
-      border-top: 1px solid var(--border);
+      border-top: 1px solid currentColor;
       margin-top: auto;
+      width: 100%;
     }
   </style>
 </head>
