adjust font sizes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="https://unpkg.com/mvp.css">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | relative_url }}">
   <style>
+    :root {
+      font-size: 1.1rem;
+    }
+
     header {
       text-align: left;
       padding: 1rem;
