--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,24 @@
 ---
 layout: default
 ---
+<style>
+  time {
+    display: block;
+    font-size: 0.9em;
+    opacity: 0.7;
+    margin-bottom: 0.25rem;
+  }
+  
+  time a {
+    border-bottom: none;
+  }
+
+  time a::after {
+    content: ' ☍';
+    margin-left: 0.5rem;
+    font-size: 1.1em;
+  }
+</style>
 <article>
   <time><a href="{{ page.url | relative_url }}">{{ page.date | date: "%Y-%m-%d" }}</a></time>
   <h2>{{ page.title }}</h2>
