--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{% if page.title %}{{ page.title }} • {% endif %}{{ site.title }}</title>
-  <link rel="icon" type="image/png" href="{{ '/favicon.png' | relative_url }}">
+  <link rel="icon" href="https://fav.farm/🦥" />
   <link rel="stylesheet" href="{{ '/style.css' | relative_url }}" id="claritas-css">
   <link rel="stylesheet" href="{{ '/normalize.css' | relative_url }}" id="normalize-css" disabled>
   <link rel="stylesheet" href="{{ '/magick.css' | relative_url }}" id="magick-css" disabled>
