--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="{{ '/style.css' | relative_url }}" id="claritas-css">
   <link rel="stylesheet" href="{{ '/normalize.css' | relative_url }}" id="normalize-css" disabled>
   <link rel="stylesheet" href="{{ '/magick.css' | relative_url }}" id="magick-css" disabled>
+{% if page.excerpt %}
+  <meta name="description" content="{{ page.excerpt | strip_html | truncate: 160 }}">
+{% elsif site.description %}
+  <meta name="description" content="{{ site.description }}">
+{% endif %}
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | relative_url }}">
   <script>
     if (localStorage.getItem('theme') === 'magick') {
