--- a/style.css
+++ b/style.css
@@ -238,8 +238,8 @@ blockquote {
 
 /* Selection highlight */
 ::selection {
-    background-color: #b8f5c8;
-    color: black;
+    background-color: rgba(119,51,204,0.45);
+    color: #ecdcff;
 }
 
 /* Compatibility */
