--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,9 @@
   <title>{% if page.title %}{{ page.title }} • {% endif %}{{ site.title }}</title>
   <link rel="icon" href="https://fav.farm/🦥" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.classless.violet.min.css">
+  <style>
+    body { max-width: 720px; }
+  </style>
 {% if page.excerpt %}
   <meta name="description" content="{{ page.excerpt | strip_html | truncate: 160 }}">
 {% elsif site.description %}
