--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="https://fav.farm/🦥" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.classless.violet.min.css">
   <style>
-    body { max-width: 720px; }
+    body { max-width: 720px; margin: 0 auto; }
   </style>
 {% if page.excerpt %}
   <meta name="description" content="{{ page.excerpt | strip_html | truncate: 160 }}">
