--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{% if page.title %}{{ page.title }} • {% endif %}{{ site.title }}</title>
   <link rel="icon" href="https://fav.farm/🦥" />
-  <link rel="stylesheet" href="https://unpkg.com/bamboo.css">
+  <link rel="stylesheet" href="{{ '/style.css' | relative_url }}">
 {% if page.excerpt %}
   <meta name="description" content="{{ page.excerpt | strip_html | truncate: 160 }}">
 {% elsif site.description %}
