--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,11 +17,11 @@
   <header>
     <h1>{{ site.title }}</h1>
     <nav>
-      <a href="{{ '/' | relative_url }}">home</a>
-      <a href="{{ '/blog/' | relative_url }}">blog</a>
-      <a href="{{ '/garden/' | relative_url }}">garden</a>
-      <a href="{{ '/now/' | relative_url }}">now</a>
-      <a href="{{ '/links/' | relative_url }}">links</a>
+      <a href="{{ '/' | relative_url }}" {% if page.url == '/' %}class="active"{% endif %}>home</a>
+      <a href="{{ '/blog/' | relative_url }}" {% if page.url contains '/blog' %}class="active"{% endif %}>blog</a>
+      <a href="{{ '/garden/' | relative_url }}" {% if page.url contains '/garden' %}class="active"{% endif %}>garden</a>
+      <a href="{{ '/now/' | relative_url }}" {% if page.url contains '/now' %}class="active"{% endif %}>now</a>
+      <a href="{{ '/links/' | relative_url }}" {% if page.url contains '/links' %}class="active"{% endif %}>links</a>
     </nav>
   </header>
 
