--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ mark {
 nav {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: flex-start;
     gap: 0.25rem 2rem;
     margin: 1rem 0 2rem;
 }
